# abb-chargedot-report

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pdf_generator.py  pyproject.toml
.github/workflows/: ci-cd.yml
templates/: index.html
